# Stellaris-Hunter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  WINDOWS_WSL_DEV.md
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.test.tsx  App.tsx  scanCache.ts  setupTests.ts  styles.css  tauri.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: catalog.rs  catalog_sync.rs  commands.rs  db.rs  documents.rs  eligibility.rs  error.rs  extract_action.rs  extract_discovery.rs  extract_progression.rs  icons.rs  install.rs  ipc_helpers.rs  lib.rs  main.rs  model.rs  paths.rs  rules.rs  run_state.rs  save.rs  serve.rs  serve_main.rs
app/src-tauri/src/extract_action/: diplomacy.rs  empire.rs  exploration.rs  military.rs  relics.rs
app/src-tauri/src/steam/: guard.rs  mod.rs  sync.rs
app/src-tauri/tests/: catalog.rs  catalog_sync.rs  dlc_state.rs  eligibility.rs  fact_overrides.rs  icon_cache.rs  install_discovery.rs  launcher_index.rs  notes.rs  run_state.rs  save_parser.rs  scan_command.rs  serve_routes.rs  steam_quarantine.rs
app/src-tauri/tests/fixtures/catalog/: catalog.json
app/src-tauri/tests/fixtures/launcher/: continue_game.json  dlc_load.json  launcher.sql
app/src-tauri/tests/fixtures/save/: gamestate.txt  meta.txt
app/src/components/: IconPlaceholder.tsx  Nav.tsx
app/src/pages/: Achievements.tsx  Notes.tsx  Overview.tsx  Planner.tsx  Runs.tsx  Settings.tsx
catalog/: CURATION_STYLE.md  DIMENSIONS.md  README.md  TAGS.md  latest.json  schema.json
catalog/curation-drafts/: batch-a-setup-gated.md  batch-b-military-conquest.md  batch-c-economy-megastructures.md  batch-d-exploration-discovery.md  batch-e-diplomacy-politics.md  batch-f-dlc-events.md
tools/: validate.sh
tools/catalog-diff/: README.md  catalog_diff.py  catalog_update.py  upstream_snapshot.json  wiki_parser.py
tools/catalog-diff/tests/: test_catalog_update.py  test_wiki_parser.py
tools/catalog-diff/tests/fixtures/: sample_wiki_Achievements.html
