[package]
name = "stellaris-hunter-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
zip = "2.2"

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "stellaris_hunter_scan"
path = "src/lib.rs"

[[bin]]
name = "stellaris-hunter-scan"
path = "src/main.rs"
