[package]
name = "stellaris-hunter-scan"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "stellaris-hunter-scan"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
tauri = { version = "2", optional = true , features = [] }
thiserror = "2.0"
walkdir = "2.5"
zip = "2.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
desktop = ["dep:tauri"]

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "stellaris_hunter_scan"
path = "src/lib.rs"

[[bin]]
name = "stellaris-hunter-scan-cli"
path = "src/cli.rs"
