[package]
name = "stellaris-hunter-scan"
version = "1.0.0"
edition = "2021"
build = "build.rs"
default-run = "stellaris-hunter-scan"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
tauri = { version = "2", optional = true , features = [] }
thiserror = "2.0"
walkdir = "2.5"
zip = "2.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
desktop = ["dep:tauri"]
steam = []

[target.'cfg(target_os = "windows")'.dependencies]
steamworks = { version = "0.13", features = ["image"] }

[dev-dependencies]
tempfile = "3.13"
tower = "0.5"

[lib]
name = "stellaris_hunter_scan"
path = "src/lib.rs"

[[bin]]
name = "stellaris-hunter-scan-cli"
path = "src/cli.rs"

[[bin]]
name = "stellaris-hunter-serve"
path = "src/serve_main.rs"
